--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 /* Header */
 .container {
   max-width: 1400px;
@@ -803,7 +804,7 @@ td.lab-session .type-label {
   border: 1px solid #e2e8f0;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08), 0 4px 10px rgba(0, 0, 0, 0.03);
   position: relative;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 
 .list-section::before {
@@ -1736,6 +1737,7 @@ td.lab-session .type-label {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -1746,6 +1748,7 @@ td.lab-session .type-label {
     opacity: 0;
     transform: translateY(20px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
