--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ body {
   margin-bottom: 30px;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 10px;
   padding: 1px;
   border-radius: 14px;
